# ratsac

./: CMakeLists.txt  README.md  usac.cc  usac.hh
dataset/homography/: unionhouse.txt  unionhouse_sorted.txt
demo_scripts/: homoexp.cfg  homoexp.cfg~  runhomo.sh  runhomo.sh~
experiments/: homography.cc  linear_experiment.cc
mcts/: MSearch.cc  MSearch.hh  State.cc  State.hh  mcts.cc  mcts.hh  node.cc  node.hh  tree.cc  tree.hh
problems/: AffineEstimator.cc  AffineEstimator.hh  Chebyshev.cc  Chebyshev.hh  FundEstimator.cc  FundEstimator.hh  FundFunctions.cc  FundFunctions.hh  HomogEstimator.cc  HomogEstimator.hh  HomographyFunctions.cc  HomographyFunctions.hh  LinearEstimator.cc  LinearEstimator.hh  LinearFunctions.cc  LinearFunctions.hh  MathFunctions.cc  MathFunctions.hh
samples/: common.cc  common.hh  test_fund.cc  test_homog.cc  test_linear.cc
toolbox/: Astar.cc  Astar.hh  HomographyFit.cc  HomographyFit.hh  LinearFit.cc  LinearFit.hh  LinearProgramming.cc  LinearProgramming.hh  QuasiconvexFit.cc  QuasiconvexFit.hh  config.cc  config.hh  extra.cc  extra.hh  quasiconvexFunctions.cc  quasiconvexFunctions.hh
